@@ -1,5 +1,6 @@
-Lars Michelsen
-Tilo Renz
-Sébastien Aperghis-Tramoni
 Bernhard Reutner-Fischer
+Lars Michelsen
+Sébastien Aperghis-Tramoni
 Stéphane Urbanovski
+Tilo Renz
+Wolfgang Powisch
