@@ -22,6 +22,7 @@ NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6
 - Fix missing SIGTERM forwarding to childs
 - Fix fmt specifier in ndo2db_daemonize()
 - Escape custom values in 'customvariablestatus' and 'customvariables'
+- Fix ndomod doesn't execute rotate_command propperly
 
 1.4b7 - 10/31/2007
 -----------------
